--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -27,6 +27,7 @@ target_sources(app PRIVATE src/behavior.c)
 target_sources(app PRIVATE src/kscan.c)
 target_sources(app PRIVATE src/matrix_transform.c)
 target_sources_ifdef(CONFIG_ZMK_MOUSE app PRIVATE src/mouse/main.c)
+target_sources_ifdef(CONFIG_ZMK_MOUSE app PRIVATE src/mouse/input_config.c)
 target_sources(app PRIVATE src/sensors.c)
 target_sources_ifdef(CONFIG_ZMK_WPM app PRIVATE src/wpm.c)
 target_sources(app PRIVATE src/event_manager.c)
