--- a/app/boards/shields/corne/corne.conf
+++ b/app/boards/shields/corne/corne.conf
@@ -4,3 +4,12 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
+
+# Set sleep timeout to 30min (30*60*1000ms)
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+
+# Bluetooth tweaks
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+# CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
