--- a/app/boards/shields/corne/corne.conf
+++ b/app/boards/shields/corne/corne.conf
@@ -1,6 +1,6 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_WS2812_STRIP=n
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
@@ -8,6 +8,9 @@ CONFIG_WS2812_STRIP=y
 # Set sleep timeout to 30min (30*60*1000ms)
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+CONFIG_ZMK_EXT_POWER=y
+
+CONFIG_ZMK_KEYBOARD_NAME="Xavien"
 
 # Bluetooth tweaks
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
