--- a/app/src/display/widgets/Kconfig
+++ b/app/src/display/widgets/Kconfig
@@ -5,7 +5,7 @@ menu "ZMK Display Widgets"
 
 config ZMK_WIDGET_LAYER_STATUS
     bool "Widget for highest, active layer using small icons"
-    depends on !ZMK_SPLIT || ZMK_SPLIT_ROLE_CENTRAL
+    #depends on !ZMK_SPLIT || ZMK_SPLIT_ROLE_CENTRAL
     select LV_USE_LABEL
 
 config ZMK_WIDGET_BATTERY_STATUS
@@ -32,7 +32,7 @@ config ZMK_WIDGET_PERIPHERAL_STATUS
 
 config ZMK_WIDGET_WPM_STATUS
     bool "Widget for displaying typed words per minute"
-    depends on !ZMK_SPLIT || ZMK_SPLIT_ROLE_CENTRAL
+    #depends on !ZMK_SPLIT || ZMK_SPLIT_ROLE_CENTRAL
     select LV_USE_LABEL
     select ZMK_WPM
 
